data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1340.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\8c\80\80\80\00\01\03\6d\6f"
    "\64\04\66\75\6e\63\00\00\03\82\80\80\80\00\01\01"
    "\0a\92\80\80\80\00\01\8c\80\80\80\00\00\02\40\03"
    "\40\10\00\0c\01\0b\0b\0b"
  )
""
)